--- a/css/styles.css
+++ b/css/styles.css
@@ -33,10 +33,6 @@ body {
     line-height: 1.3;
 }
 
-.logo:hover .logo-web {
-    color: green;
-}
-
 .logo .logo-web:hover {
     color: var(--iris);
 }
@@ -195,7 +191,7 @@ body {
 
 .modal {
     width: 408px;
-    height: 584px;
+    /* height: 584px; */
     background-color: white;
     border-radius: 4px;
     padding: 24px;
@@ -275,6 +271,60 @@ body {
     padding: 8px 16px;
 }
 
+.service-agree {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.agree-checkbox {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: 23px;
+    opacity: 0;
+}
+
+.agree-check-icon {
+    fill: none;
+    margin-right: 8px;
+    border: 2px solid black;
+    border-radius: 2px;
+    transition: 250ms;
+    transition-property: border-color, background-color, fill;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.service-agree .agree-checkbox:focus + .agree-check-icon,
+.service-agree .agree-checkbox:checked:focus + .agree-check-icon {
+    outline: 2px solid #212121;
+}
+
+.service-agree .agree-checkbox:checked + .agree-check-icon {
+    background-color: var(--iris);
+    border-color: var(--iris);
+    fill: white;
+    outline: none;
+    stroke: white;
+    stroke-width: 0.2;
+}
+
+.agree-text {
+    font-size: 12px;
+}
+
+.modal-send {
+    margin-top: 15px;
+    padding: 16px 32px;
+    background-color: var(--iris);
+    color: white;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    border-color: transparent;
+}
+
+.modal-send:hover {
+    cursor: pointer;
+}
 /* END OF HERO SECTION STYLING */
 
 /* ABOUT STYLING */
@@ -415,5 +465,52 @@ body {
         1.5 = 24px
     */
     letter-spacing: 0.32px;
+}
+
+.footer-social {
+    margin-left: 120px;
+}
+
+.footer-sub {
+    margin-left: 80px;
+}
+
+.footer .team-socials-icon {
+    margin-right: 10px;
+}
+
+.footer-social-text,
+.footer-subscribe-text {
+    margin-top: 0;
+    color: white;
+}
+
+.input-sub {
+    border: 2px solid white;
+    background: none;
+    border-radius: 4px;
+    padding: 10px;
+    width: 264px;
+    background-color: none;
+    margin-right: 24px;
+}
+
+.input-sub::placeholder {
+    color: white;
+}
+
+.btn-sub {
+    display: inline-flex;
+    align-items: center;
+    color: white;
+    padding: 8px 24px;
+    gap: 16px;
+    background-color: var(--iris);
+    border: none;
+    border-radius: 4px;
+}
+
+.btn-sub svg {
+    fill: white;
 }
 /*END OF FOOTER STYLING*/
